# BRindeX

./: .gitignore  Cargo.toml  PRD.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-real-time-updates/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md
.planning/phases/03-search-experience/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: lib.rs
src/db/: mod.rs  ops.rs  schema.rs
src/indexer/: fat.rs  fat_reconciler.rs  mft.rs  mod.rs  usn_monitor.rs  volume.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/search/: filters.rs  grammar.pest  mod.rs  parser.rs  query.rs
src/service/: config.rs  control.rs  mod.rs  volume_watcher.rs
src/ui/: actions.rs  app.rs  hotkey.rs  mod.rs  results.rs
