[package]
name = "ffi"
version = "0.1.0"
edition = "2021"
description = "FastFileIndex - Instant file/folder name lookups"

[[bin]]
name = "ffi-service"
path = "src/bin/ffi-service.rs"

[dependencies]
windows-service = "0.7"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2.0"
anyhow = "1.0"
rusqlite = { version = "0.38", features = ["bundled"] }
mft = "0.7"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_Foundation",
] }
