[package]
name = "ffi"
version = "0.1.0"
edition = "2021"
description = "FastFileIndex - Instant file/folder name lookups"

[[bin]]
name = "ffi-service"
path = "src/bin/ffi-service.rs"

[[bin]]
name = "ffi-search"
path = "src/bin/ffi-search.rs"

[dependencies]
windows-service = "0.7"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2.0"
anyhow = "1.0"
rusqlite = { version = "0.38", features = ["bundled"] }
mft = "0.7"
walkdir = "2"

# Phase 2: Real-time updates
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Phase 3: IPC for search UI
serde_json = "1.0"
sysinfo = "0.33"
directories = "5.0"

# Phase 3: Search syntax parser
pest = "2.8"
pest_derive = "2.8"
chrono = { version = "0.4", features = ["serde"] }

# Phase 3: Search UI
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_extras = "0.30"
opener = { version = "0.8", features = ["reveal"] }
arboard = "3.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

# USN Journal support - Windows only
usn-journal-rs = "0.4"

# Global hotkey support - Windows only
global-hotkey = "0.6"
